--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>PowerFull - Fitness Training - Mert Topcu</title>
     <link rel="stylesheet" href="style.css" />
 
+    <link rel="icon" href="images/android-chrome-512x512.png">
+
     <!-- Font I used -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
