--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <a href="/" class="logo">
           <img src="images/logo.png" alt="PowerFull Logo" />
         </a>
+        <button class="mobile-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <div class="nav-links">
           <a href="#home">Home</a>
           <a href="#classes">Classes</a>
